packages/typ/tests/fixtures/diagnostics/0032_core_if_condition_non_bool_03.ml.expected
File "0032_core_if_condition_non_bool_03.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0032_core_if_condition_non_bool_03 is not a valid module name.

File "0032_core_if_condition_non_bool_03.ml", line 1, characters 11-12:
1 | let _ = if 2 then 3 else 4
               ^
Error: The constant 2 has type int but an expression was expected of type
         bool
       because it is in the condition of an if-statement
